--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,29 +1,28 @@
 ##
 # Temporary Makefile
 #
-# Treat warnings as errors. This seems to be the only way to 
+# Treat warnings as errors. This seems to be the only way to
 # convince some students of the importance of ensuring that
 # their code compiles without warnings before starting to debug.
 #
-# Do not change this line.  We will not use your copy of the Makefile 
-# we will use *this* Makefile to run check.py when grading.
+# Do not change this line.  We will not use your copy of the Makefile
+# we will use *this* Makefile when grading.
 #
 # for benchmarking
-CFLAGS=-Wall -O3 -Werror -Wmissing-prototypes -fopenmp -std=gnu11
-# for debugging
-#CFLAGS=-Wall -O0 -g -Werror -Wmissing-prototypes -std=gnu11
-
-#CXXFLAGS=-Wall -O3 -Werror -fopenmp
-CXXFLAGS=-Wall -g -Werror -fopenmp
-
-LDLIBS=-lpthread -lrt
+CFLAGS=-pthread -Wall -O3 -Werror -Wmissing-prototypes -fopenmp
+LDFLAGS=-pthread
+# for debugging, you may use these
+#CFLAGS=-Wall -O0 -g -Werror -Wmissing-prototypes -fopenmp
 
 OBJ=threadpool.o list.o threadpool_lib.o
 
 ALL=quicksort psum_test fib_test mergesort nqueens \
-	threadpool_test threadpool_test2 threadpool_test3 threadpool_test4 threadpool_test5
+	threadpool_test threadpool_test2 threadpool_test3 threadpool_test4 threadpool_test5 \
+	threadpool_test6
 
 all: $(ALL)
+
+threadpool_test6: threadpool_test6.o $(OBJ)
 
 threadpool_test5: threadpool_test5.o $(OBJ)
 
@@ -40,9 +39,6 @@ quicksort: quicksort.o $(OBJ)
 nqueens: nqueens.o $(OBJ)
 
 mergesort: mergesort.o $(OBJ)
-
-mergesort-gnu: mergesort-gnu.o $(OBJ)
-	g++ $(CXXFLAGS) -o mergesort-gnu mergesort-gnu.o $(OBJ) $(LDLIBS)
 
 psum_test: psum_test.o $(OBJ)
 
