added UBSAN to LDFLAGS

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -12,7 +12,8 @@
 # Note that this defines NDEBUG, which removes all assert()s from your code
 CFLAGS=-pthread -Wall -O3 -Werror -Wmissing-prototypes -fopenmp -DNDEBUG
 LDFLAGS=-pthread
-# for debugging, you may use these
+# for debugging, you may use these 2
+#LDFLAGS=-pthread -fsanitize=undefined
 #CFLAGS=-Wall -O0 -g -Werror -Wmissing-prototypes -fopenmp -fsanitize=undefined
 
 OBJ=threadpool.o list.o threadpool_lib.o
